--- a/api-gateway/values.yaml
+++ b/api-gateway/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: registry.k8.wildwidewest.xyz/repository/docker-repository/pocs/meltingpoc-api-gateway
   tag: stable
   pullPolicy: IfNotPresent
 
@@ -15,12 +15,12 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations: 
+    kubernetes.io/ingress.class: nginx
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
   path: /
   hosts:
-    - chart-example.local
+    - meltingpoc.k8.wildwidewest.xyz
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
