--- a/gestion-evenement/values.yaml
+++ b/gestion-evenement/values.yaml
@@ -15,9 +15,9 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
   path: /
   hosts:
     - chart-example.local
