--- a/referentiel-personnes-api/values.yaml
+++ b/referentiel-personnes-api/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: registry.k8.wildwidewest.xyz/repository/docker-repository/pocs/meltingpoc-api-personnes
   tag: stable
   pullPolicy: IfNotPresent
 
@@ -16,11 +16,11 @@ service:
 ingress:
   enabled: false
   annotations:
-    kubernetes.io/ingress.class: registry.k8.wildwidewest.xyz/repository/docker-repository/pocs/meltingpoc-api-personnes
+    kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
   path: /
   hosts:
-    - chart-example.local
+  - chart-example.local
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -36,7 +36,7 @@ resources: {}
   #  memory: 128Mi
   # requests:
   #  cpu: 100m
-  #  memory: 128Mi
+#  memory: 128Mi
 
 nodeSelector: {}
 
