--- a/parcours-integration/values.yaml
+++ b/parcours-integration/values.yaml
@@ -14,13 +14,13 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
   path: /
   hosts:
-    - chart-example.local
+    - parcours-integration.k8.wildwidewest.xyz
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
