--- a/gestion-evenement/templates/service-postgres.yaml
+++ b/gestion-evenement/templates/service-postgres.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "evenement-parcours-integration.fullname" . }}-postgres
+  name: {{ template "gestion-evenement.fullname" . }}-postgres
   labels:
-    app: {{ template "evenement-parcours-integration.name" . }}-postgres
-    chart: {{ template "evenement-parcours-integration.chart" . }}-postgres
+    app: {{ template "gestion-evenement.name" . }}-postgres
+    chart: {{ template "gestion-evenement.chart" . }}-postgres
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
@@ -13,5 +13,5 @@ spec:
     - port: 5432
       targetPort: 5432
   selector:
-    app: {{ template "evenement-parcours-integration.name" . }}-postgres
+    app: {{ template "gestion-evenement.name" . }}-postgres
     release: {{ .Release.Name }}
