--- a/parcours-integration/values.yaml
+++ b/parcours-integration/values.yaml
@@ -24,7 +24,7 @@ ingress:
     - parcours-integration.k8.wildwidewest.xyz
   secretName: certificate
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
