--- a/api-gateway/values.yaml
+++ b/api-gateway/values.yaml
@@ -13,18 +13,16 @@ service:
   type: ClusterIP
   port: 80
 
-ingress:
+ingress: true
   enabled: false
-  annotations: 
+  annotations:
+    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/tls-acme: "true"
   path: /
   hosts:
     - meltingpoc.k8.wildwidewest.xyz
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  secretName: certificate
 
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
