--- a/api-gateway/values.yaml
+++ b/api-gateway/values.yaml
@@ -21,6 +21,10 @@ ingress:
     kubernetes.io/tls-acme: "true"
   path: /
   hosts:
+  - meltingpoc.k8.wildwidewest.xyz
+  secretName: certificate
+  tls:
+  - hosts:
     - meltingpoc.k8.wildwidewest.xyz
   secretName: certificate
 
