--- a/grav/templates/deployment.yaml
+++ b/grav/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
               containerPort: 80
               protocol: TCP
           volumeMounts:
-          - mountPath: /var/www/html
+          - mountPath: /var/www/html/user/pages
             name: grav-home
 #          livenessProbe:
 #            httpGet:
