--- a/evenement-parcours-integration/templates/deployment.yaml
+++ b/evenement-parcours-integration/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           protocol: TCP
         env:
         - name: "gestion_evenement_url"
-          value: gestion-evenement-{{ .Values.env }}
+          value: gestion-evenement
         #          livenessProbe:
         #            httpGet:
         #              path: /
