--- a/evenement-rappel/templates/deployment.yaml
+++ b/evenement-rappel/templates/deployment.yaml
@@ -29,9 +29,9 @@ spec:
               protocol: TCP
           env:
             - name: "evenement_parcours_integration_url"
-              value: evenement-parcours-integration-{{ .Values.env }}
+              value: evenement-parcours-integration
             - name: "referentiel_personnes_api_url"
-              value: referentiel-personnes-api-{{ .Values.env }}
+              value: referentiel-personnes-api
 #          livenessProbe:
 #            httpGet:
 #              path: /
