--- a/api-gateway/templates/ingress.yaml
+++ b/api-gateway/templates/ingress.yaml
@@ -20,14 +20,14 @@ spec:
   {{- range .Values.ingress.tls }}
     - hosts:
       {{- range .hosts }}
-        - {{ . }}
+        - {{ . }}{{ env }}{{ domain }}
       {{- end }}
       secretName: {{ .secretName }}
   {{- end }}
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ . }}
+    - host: {{ . }}{{ env }}{{ domain }}
       http:
         paths:
           - path: {{ $ingressPath }}
