--- a/api-gateway/values.yaml
+++ b/api-gateway/values.yaml
@@ -16,7 +16,7 @@ service:
 ingress:
   enabled: true
   annotations:
-    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
+    certmanager.k8s.io/issuer: letsencrypt-issuer
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   path: /
@@ -45,7 +45,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
-env: ''
-
-domain: 'k8.wildwidewest.xyz'
