--- a/evenement-rappel/values.yaml
+++ b/evenement-rappel/values.yaml
@@ -17,7 +17,7 @@ ingress:
   enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/issuer: letsencrypt-prod
   path: /
   hosts:
     - chart-example.local
