--- a/skills-api/values.yaml
+++ b/skills-api/values.yaml
@@ -14,7 +14,7 @@ service:
   port: 80
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     certmanager.k8s.io/issuer: letsencrypt-issuer
     kubernetes.io/ingress.class: nginx
