--- a/grav/templates/ingress.yaml
+++ b/grav/templates/ingress.yaml
@@ -22,8 +22,8 @@ spec:
       {{- range .hosts }}
         - {{ . }}
       {{- end }}
-      secretName: {{ .secretName }}
   {{- end }}
+      secretName: {{ template "grav.name" . }}
 {{- end }}
   rules:
   {{- range .Values.ingress.hosts }}
