--- a/grav/templates/pv-pages.yml
+++ b/grav/templates/pv-pages.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-grav
+  name: grav-pages
 spec:
   capacity:
     storage: 10Gi
@@ -11,3 +11,6 @@ spec:
     path: /zpool-126262/WWWGRAV/pages
     server: 10.16.103.9
   persistentVolumeReclaimPolicy: Recycle
+  claimRef:
+    namespace: default
+    name: grav-pages
