--- a/grav/templates/pvc-pages.yml
+++ b/grav/templates/pvc-pages.yml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-grav
+  name: grav-pages
 spec:
   accessModes:
   - ReadWriteOnce
