--- a/elasticsearch/requirements.yaml
+++ b/elasticsearch/requirements.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: elasticsearch
     version: "1.13.1"
     repository: https://kubernetes-charts.storage.googleapis.com
+  - name: kibana
+    version: "0.16.4"
+    repository: https://kubernetes-charts.storage.googleapis.com
