--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -15,16 +15,6 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -34,12 +24,34 @@ resources: {}
   # limits:
   #  cpu: 100m
   #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+# requests:
+#  cpu: 100m
+#  memory: 128Mi
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+data:
+  hooks:
+    drain:
+      enabled: False
+
+kibana:
+  ingress:
+    enabled: True
+    hosts:
+      - kibana.k8.wildwidewest.xyz
+    annotations:
+      certmanager.k8s.io/issuer: letsencrypt-issuer
+      kubernetes.io/ingress.class: nginx
+      kubernetes.io/tls-acme: "true"
+    tls:
+      - hosts:
+          - kibana.k8.wildwidewest.xyz
+        secretName: certificate
+    secretName: certificate
+  env:
+    ELASTICSEARCH_URL: http://elk-elasticsearch-client:9200
